--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
 		"build": "next build",
 		"export": "next export",
-    "start": "next start"
+		"start": "next start",
+		"deploy": "next build && next export && git add out/ && git commit -m \"Deploy gh-pages\" && git subtree push --prefix out origin gh-pages"
   },
   "dependencies": {
     "common-tags": "^1.8.0",
